{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 26,
  "lineage": "00d32881-d800-b2b1-5ffb-807d6756a150",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c152cc075bf5d189",
            "association_id": "eipassoc-0bd92253ccd050a94",
            "domain": "vpc",
            "id": "eipalloc-0c152cc075bf5d189",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0ea5488d8c5170136",
            "private_dns": "ip-10-0-0-34.us-east-2.compute.internal",
            "private_ip": "10.0.0.34",
            "public_dns": "ec2-3-131-79-153.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.79.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw-thai",
            "aws_vpc.vpc-thai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:678260741805:instance/i-0cd4c8f2945e15b1f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd4c8f2945e15b1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-087e5a1f1ecc038f0",
            "private_dns": "ip-10-0-1-86.us-east-2.compute.internal",
            "private_ip": "10.0.1.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f93b79f8fdb4f409",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0218b9d9333743c26",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-087a000891bcc4ab9"
            ]
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.vpc-thai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-thai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678260741805:internet-gateway/igw-02885dcc735c68292",
            "id": "igw-02885dcc735c68292",
            "owner_id": "678260741805",
            "tags": {
              "Name": "gw-thai"
            },
            "tags_all": {
              "Name": "gw-thai"
            },
            "vpc_id": "vpc-0a5f8011a3f4b8d12"
          },
          "dependencies": [
            "aws_vpc.vpc-thai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c152cc075bf5d189",
            "connectivity_type": "public",
            "id": "nat-0d5ab578970b6c138",
            "network_interface_id": "eni-0ea5488d8c5170136",
            "private_ip": "10.0.0.34",
            "public_ip": "3.131.79.153",
            "subnet_id": "subnet-0bc0ce32e2722fbf4",
            "tags": {
              "Name": "Main NAT Gateway"
            },
            "tags_all": {
              "Name": "Main NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw-thai",
            "aws_subnet.public",
            "aws_vpc.vpc-thai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "art-thai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678260741805:route-table/rtb-0cefcda4b9774beaf",
            "id": "rtb-0cefcda4b9774beaf",
            "owner_id": "678260741805",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02885dcc735c68292",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "art-thai"
            },
            "tags_all": {
              "Name": "art-thai"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5f8011a3f4b8d12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-thai",
            "aws_vpc.vpc-thai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06694561ec9f33651",
            "route_table_id": "rtb-0cefcda4b9774beaf",
            "subnet_id": "subnet-0bc0ce32e2722fbf4"
          },
          "dependencies": [
            "aws_internet_gateway.gw-thai",
            "aws_route_table.art-thai",
            "aws_subnet.public",
            "aws_vpc.vpc-thai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678260741805:security-group/sg-093c58558e6824668",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093c58558e6824668",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.83/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Sg",
            "name_prefix": "",
            "owner_id": "678260741805",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sg"
            },
            "tags_all": {
              "Name": "Sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5f8011a3f4b8d12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-thai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Sg-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678260741805:security-group/sg-0d7f18d4165aedd39",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7f18d4165aedd39",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Sg-private",
            "name_prefix": "",
            "owner_id": "678260741805",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sg-private"
            },
            "tags_all": {
              "Name": "Sg-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5f8011a3f4b8d12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-thai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678260741805:subnet/subnet-0218b9d9333743c26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0218b9d9333743c26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "678260741805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-0a5f8011a3f4b8d12"
          },
          "dependencies": [
            "aws_vpc.vpc-thai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678260741805:subnet/subnet-0bc0ce32e2722fbf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc0ce32e2722fbf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "678260741805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0a5f8011a3f4b8d12"
          },
          "dependencies": [
            "aws_vpc.vpc-thai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-thai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678260741805:vpc/vpc-0a5f8011a3f4b8d12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e1b842cb12d5576b",
            "default_route_table_id": "rtb-0ff74d85839182cfa",
            "default_security_group_id": "sg-087a000891bcc4ab9",
            "dhcp_options_id": "dopt-050ad193289630b8c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a5f8011a3f4b8d12",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ff74d85839182cfa",
            "owner_id": "678260741805",
            "tags": {
              "Name": "vpc-thai"
            },
            "tags_all": {
              "Name": "vpc-thai"
            }
          }
        }
      ]
    }
  ]
}